add globalization support

--- a/gs-rest-service/src/main/resources/templates/status.html
+++ b/gs-rest-service/src/main/resources/templates/status.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+
+	<h1 th:text="#{hello.header}"></h1>
 	<form action="#" th:action="@{/status}" method="post" >
 	<fieldset>
 	<label for="intranetId">Intranet Id</label>
