--- a/gs-rest-service/src/main/resources/templates/status.html
+++ b/gs-rest-service/src/main/resources/templates/status.html
@@ -3,9 +3,14 @@
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link th:href="@{/resources/css/main.css}" rel="stylesheet" />
+    <script th:src="@{/resources/jq/jquery-1.11.3.js}"></script>
+    <script th:src="@{/resources/js/main.js}"></script>
 </head>
 <body>
 
+    <div id="msg"></div>
+	
 	<h1 th:text="#{hello.header}"></h1>
 	<form action="#" th:action="@{/status}" method="post" >
 	<fieldset>
