fix relative url

--- a/gs-rest-service/src/main/resources/templates/status.html
+++ b/gs-rest-service/src/main/resources/templates/status.html
@@ -32,7 +32,7 @@
 	<tr th:each="recomm : ${blogRecommends}">
 	<td th:text="${recomm.title}"></td>
 	<td th:text="${recomm.totalResult}"></td>
-	<td><a href="#" th:href="'/listperson/' + ${recomm.id}">List person</a></td>
+	<td><a href="#" th:href="@{'/listperson/' + ${recomm.id}}">List person</a></td>
 	
 	</tr>
 	</table>
